--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mars_rover_db
-spring.datasource.username=mars_rover
-spring.datasource.password=mars_rover_password
+spring.datasource.url=jdbc:mysql://mphv.nl:3306/yannick_db
+spring.datasource.username=yannick_app
+spring.datasource.password=bRWN5E0GyMMW8PNwogW5
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.cache=false
 server.port=8081
