--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mphv.nl:3306/yannick_db
+spring.datasource.url=jdbc:mysql:/149.210.215.156:3306/yannick_db
 spring.datasource.username=yannick_app
 spring.datasource.password=bRWN5E0GyMMW8PNwogW5
 spring.jpa.hibernate.ddl-auto=update
