--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=912ddac1957420ac68dd5c8724aa78d06c327366e7e7848f93f4e
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.cache=false
+server.port=8081
